Version 0.27.0
   * Now accepts gzipped (*.gz) FASTQ input files.
   * New tutorials added to the documentation

Version 0.26.1
   * Fixed a crash that sometimes occurred when processing polymorphism statistics.
   * Corrected handling of shifted positions for some indel mutations.
   * Updates to several gdtools commands. Usage changed in some cases.

Version 0.26.0
   * First version with binary distributions for Linux and MacOSX.
   * Updated HTML documentation (installation instructions, annotated bibliography, FAQ).

Version 0.25d
   * Fixed problems introduced when program_data_path moved to being relative
     rather than absolute; affected bam2cov for example.

Version 0.25c
    * Maintenance release with bug fix for a rare problem affecting
      de novo assembled reference sequences.

Version 0.25b
    * Maintenance release with bug fixes.
    * Fixed crash of several gdtools commands.
    * Fixed crash under rare circumstances in polymorphism mode.

Version 0.25a
    * Maintenance release with bug fixes.
    * Fixed floating point error encountered on some compilers/systems.
    * Fixed compilation of samtools/breseq with MacOSX clang compiler.
    * Miscellaneous bug fixes related to gdtools commands.

Version 0.25
    * Release for publication describing consensus SV prediction:
      Barrick, J.E., Colburn, G., Deatherage D.E., Traverse, C.C., 
      Strand, M.D., Borges, J.J., Knoester, D.B., Reba, A., Meyer, A.G. (2014) 
      Identifying structural variation in haploid microbial genomes from short-read 
      resequencing data using breseq. BMC Genomics. 15:1039.

Version 0.24
    * Fix for crash when some junction alignment files had long names.
    * Added Variant Call Format (VCF) output and associated gdtools command GD2VCF.
    * Improved robustness of fitting coverage distribution for low coverage reference sequences.
    * Fixed compilation on Mac OS 10.9 / Clang
    * Fixed errors in parsing some GenBank files.